--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -172,13 +172,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     </div>
                 </div>
                 <hr>
-                <div class="mt-4">
+                <div class="mt-4 d-flex">
+                    <div class="graph-view-container btn" id="alert-from-metrics-container">
+                        <button class="btn alert-from-metrics-btn below-btn-img" id="alert-from-metrics-btn" title="Create Alert"></button>
+                        <label class="label" style="cursor: pointer;">Create Alert</label>
+                    </div>
                     <div class="graph-view-container btn">
                         <label class="switch">
                             <input type="checkbox" id="toggle-switch" checked>
                             <span class="slider round"></span>
                         </label>
-                        <label class="label">One graph per query</label>
+                        <label class="label" style="margin-left: 10px">One graph per query</label>
                     </div>
                 </div>
                 <div id="metrics-graphs" class="metrics-graph-container mt-5">
