--- a/static/test-data.html
+++ b/static/test-data.html
@@ -43,9 +43,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
+    <link rel="stylesheet" href="./css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" href="./css/siglens.css?v={{ CSSVersion }}" />
     <link rel="stylesheet" href="./css/query-builder.css?v={{ CSSVersion }}" />
 
+    <style>
+        .tab-chart-list{
+            margin-left: 20px !important;
+            min-width: 600px;
+        }
+    </style>
     <script src="./js/lib/lodash.min.js"></script>
     <script src="./js/lib/jquery-3.6.0.min.js"></script>
     <script src="./js/lib/jquery-ui.min.js"></script>
@@ -154,8 +161,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/saved-query.js?cb=1_1_10"></script>
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./js/test-data.js"></script>
-    <script src="./component/upper-navbar/upper-navbar.js"></script>
-
+    
     {{ .RunCheck2 | safeHTML }}
     {{ .RunCheck3 | safeHTML }}
 </body>
