Updated Rulename popup
Signed-off-by: Dhruvi Trivedi <93305785+602dhruviii@users.noreply.github.com>

--- a/static/index.html
+++ b/static/index.html
@@ -425,12 +425,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </div>
         <div class="addrulepopupOverlay">
             <div class="addrulepopupContent">
-                <h3 class="header" style="font-size: 18px;text-align: left;font-family: 'DINpro';font-weight: 600;">Add Rule</h3>
-                <label for="rule-name" style="font-size: smaller;font-weight: 600;">Rule Name:</label>
+                <h3 class="header" style="font-size: 18px;text-align: left;font-family: 'DINpro';font-weight: 600;">Add Alert Rule</h3>
+                <label for="rule-name" style="font-size: smaller;font-weight: 600;">Alert Rule Name:</label>
                 <input type="text" id="rule-name" name="rule-name" required>
-                <div class="btncontainer" style="display:flex;flex-direction:row;justify-content:right;align-content:right;margin-top:1%">
+                <div class="btncontainer" style="display:flex;flex-direction:row;justify-content:right;align-content:right;margin-top:3%">
                     <button type="button" id="addrule-cancel-btn">Cancel</button>
-                    <button type="button" id="addrule-save-btn">Open</button>
+                    <button type="button" id="addrule-save-btn">Add</button>
                 </div>
             </div>
         </div>
