submenu disappears on clicking on the any other menu, modified css as per metric-summary

--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -61,6 +61,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <div class="metric-summary" style="height:100vh;width: 100vw;padding:20px">
             <div style="display: flex; align-items: center;" class="metric-summary-head">
+        <div class="metric-summary" style="height:100vh;width: 100vw;padding:20px">
+            <div style="display: flex; align-items: center;" class="metric-summary-head">
                 <h5 style="margin-right: 10px;font-size:18px">
                     All metrics reporting across your infrastructure in the past
                 </h5>
@@ -115,12 +117,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     </div>
                 </div>
             </div>
-            <div class="mt-3">
-                <input type="text" class="search-input" placeholder="Search Metric Name" id="metric-search-input">
-            </div>
-            
-            <div class="mt-3 h-100 mb-2" id="tracing-container">
-                <div id="ag-grid" class="ag-theme-mycustomtheme" style="padding-bottom:2%">
+            <div class="metric-summary-searchcontainer" style="display:flex;flex-direction:row;flex-wrap: wrap; justify-content: flex-start;gap:5px;margin-top:1%;margin-bottom:0.5%">
+                <div class="metric-summary-search">
+                    <input type="text" class="form-control search-db-input" placeholder="Search Metric Name" title="Search your dashboards" id="metric-search-input">
                 </div>
             </div>
           
