--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -58,8 +58,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <!-- Add your sidebar content here -->
         </div>
 
-        <div class="summary" style="height:100vh;width: 100vw;padding:20px">
-            <div style="display: flex; align-items: center;" class="head">
+        <div class="metric-summary" style="height:100vh;width: 100vw;padding:20px">
+            <div style="display: flex; align-items: center;" class="metric-summary-head">
                 <h5 style="margin-right: 10px;font-size:18px">
                     All metrics reporting across your infrastructure in the past
                 </h5>
@@ -114,8 +114,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     </div>
                 </div>
             </div>
-            <div class="searchcontainer" style="display:flex;flex-direction:row;flex-wrap: wrap; justify-content: flex-start;gap:5px;margin-top:1%;margin-bottom:0.5%">
-                <div class="search1">
+            <div class="metric-summary-searchcontainer" style="display:flex;flex-direction:row;flex-wrap: wrap; justify-content: flex-start;gap:5px;margin-top:1%;margin-bottom:0.5%">
+                <div class="metric-summary-search">
                     <input type="text" class="form-control search-db-input" placeholder="Search Metric Name" title="Search your dashboards" id="metric-search-input">
                 </div>
             </div>
