updated the table UI

--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -117,9 +117,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     </div>
                 </div>
             </div>
-            <div class="metric-summary-searchcontainer" style="display:flex;flex-direction:row;flex-wrap: wrap; justify-content: flex-start;gap:5px;margin-top:1%;margin-bottom:0.5%">
-                <div class="metric-summary-search">
-                    <input type="text" class="form-control search-db-input" placeholder="Search Metric Name" title="Search your dashboards" id="metric-search-input">
+            <div class="mt-3">
+                <input type="text" class="search-input" placeholder="Search Metric Name" id="metric-search-input">
+            </div>
+            
+            <div class="mt-3 h-100 mb-2" id="tracing-container">
+                <div id="ag-grid" class="ag-theme-mycustomtheme" style="padding-bottom:2%">
                 </div>
             </div>
           
