--- a/static/index.html
+++ b/static/index.html
@@ -425,10 +425,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </div>
         <div class="addrulepopupOverlay">
             <div class="addrulepopupContent">
-                <h3 class="header" style="font-size: 18px;text-align: left;font-family: 'DINpro';font-weight: 600;">Add Alert Rule</h3>
-                <label for="rule-name" style="font-size: smaller;font-weight: 600;">Alert Rule Name:</label>
-                <input type="text" id="rule-name" name="rule-name" required>
-                <div class="btncontainer" style="display:flex;flex-direction:row;justify-content:right;align-content:right;margin-top:3%">
+                <h3 class="header" style="font-size: 18px;text-align: left;font-family: 'DINpro';font-weight: 600;">Create Alert</h3>
+                <div class="popupcont">
+                <label for="rule-name" style="font-size:small;font-weight: 600;color:black">Enter alert rule name</label>
+                <input type="text" id="rule-name" name="rule-name" required placeholder="Name" style="background-color:rgb(237, 237, 237)">
+                </div>
+                <div class="btncontainer" style="display:flex;flex-direction:row;justify-content:right;align-content:right;padding:3%">
                     <button type="button" id="addrule-cancel-btn">Cancel</button>
                     <button type="button" id="addrule-save-btn">Add</button>
                 </div>
