--- a/static/alert.html
+++ b/static/alert.html
@@ -44,6 +44,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
     <link rel="stylesheet" href="./css/siglens.css?v={{ CSSVersion }}" />
+    <link rel="stylesheet" href="./css/metrics-explorer.css?v={{ CSSVersion }}" />
+
+    <style>
+        .metrics-graph-container{
+            display: block;
+        }
+        #metrics-explorer, #metrics-graphs{
+            display: none;
+        }
+
+    </style>
 
     <script src="./js/lib/lodash.min.js"></script>
     <script src="./js/lib/jquery-3.6.0.min.js"></script>
@@ -82,6 +93,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <button class="btn" id="save-alert-btn" type="submit" tabindex="10">Save</button>
                     </div>
                     <div class="add-alert-form">
+                        <div id="metrics-graphs" class="metrics-graph-container">
+    
+                        </div>
                         <div class="subsection-heading">
                             <div class="circle">1</div>
                             <div>Alert Rule</div>
@@ -106,9 +120,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     </button>
                                     <div class="dropdown-menu box-shadow" id="data-source-options">
                                         <li id="option-1" class="data-source-option active">Logs</li>
+                                        <li id="option-1" class="data-source-option">Metrics</li>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="logs-lang-container">
                                     <button class="btn dropdown-toggle" type="button" id="logs-language-btn"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                                         data-bs-toggle="dropdown" title="Select Query Type" style="display: none;">
@@ -164,6 +179,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 city=* | stats avg(latency)
                                 '></i>
                             </div>
+                            <div id="metrics-explorer">
+                                <div id="metrics-queries"></div>
+                                <div id="metrics-formula"></div>
+                                 <div class="mt-3 d-flex ">
+                                     <button id="add-query" class="btn" type="button"><span class="plus-icon">+</span> Add Query</button>
+                                     <button id="add-formula" class="btn" type="button"><span class="plus-icon">+</span> Add Formula</button>
+                                 </div>
+                             </div>
                         </div>
                         <div class="subsection-heading">
                             <div class="circle">3</div>
@@ -278,6 +301,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/contacts.js?cb=1_1_10"></script>
+    <script src="./js/lib/chart.umd.min.js"></script>
+    <script src="./js/metrics-explorer.js?cb=1_1_10"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
 
