--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -59,7 +59,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <!-- Add your sidebar content here -->
         </div>
 
-        <div class="metric-summary" style="height:100vh;width: 100vw;padding:20px">
+        <div class="metric-summary" style="height:100vh;width: 100vw">
             <div style="display: flex; align-items: center;" class="metric-summary-head">
         <div class="metric-summary" style="height:100vh;width: 100vw;padding:20px">
             <div style="display: flex; align-items: center;" class="metric-summary-head">
