--- a/static/alert.html
+++ b/static/alert.html
@@ -49,6 +49,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <style>
         .metrics-graph-container{
             display: block;
+        }
+        .metrics-graph{
             margin-bottom: 20px;
         }
         #metrics-explorer, #metrics-graphs{
