updated the popup ui and removed old colors

--- a/static/index.html
+++ b/static/index.html
@@ -425,14 +425,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </div>
         <div class="addrulepopupOverlay">
             <div class="addrulepopupContent">
-                <h3 class="header" style="font-size: 18px;text-align: left;font-family: 'DINpro';font-weight: 600;">Create Alert</h3>
+                <h3 class="header">Create Alert</h3>
                 <div class="popupcont">
-                <label for="rule-name" style="font-size:small;font-weight: 600;color:black">Enter alert rule name</label>
+                <label>Enter alert rule name</label>
                 <input type="text" id="rule-name" name="rule-name" required placeholder="Name" style="background-color:rgb(237, 237, 237)">
+                
                 </div>
-                <div class="btncontainer" style="display:flex;flex-direction:row;justify-content:right;align-content:right;padding:3%">
+                <div class="btncontainer">
                     <button type="button" id="addrule-cancel-btn">Cancel</button>
-                    <button type="button" id="addrule-save-btn">Add</button>
+                    <button type="button" id="addrule-save-btn">Add
+                        <img src="assets/new-tab-white-icon.svg">
+                    </button>
                 </div>
             </div>
         </div>
