--- a/static/alert-details.html
+++ b/static/alert-details.html
@@ -88,17 +88,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
                 <div id="properties-grid" class="ag-theme-mycustomtheme"
                     style="height: 500px; width: 100%; padding-top: 20px;"></div>
-                    
-                    <div id="history-search-container" class="search-container" style="display: none;">
+                    <div id="history-search-container">
                         <div>
-                            <input type="text" class="form-control search-history-input" placeholder="Search history by action or state"
-                                title="Search history">
+                            <input type="text" class="form-control" id="history-filter-input" placeholder="Search By Action Or State" title="Search history">
                         </div>
                         <div class="text-end">
-                            <button class="btn" id="run-history-search" title="Run your search">Search</button>
+                            <button class="btn" id="search-history-btn" style="margin-top: 5px;" title="Run your search">Search</button>
                         </div>
-                    </div>
-                    
+                    </div>                                    
                 <div id="history-grid" class="ag-theme-mycustomtheme"
                     style="height: 500px; width: 100%; display: none; padding-top: 20px;"></div>
             </div>
