UI - metrics explorer - Display dynamic x-axis for timechart (#1180)
* changes to display dynamic x-axis for timechart

* address PR comments

* address  PR comments, increase gap for longer intervals

* address PR comments- make tick callback as separate function

* fix lint error

* fix metrics e2e test

* removed backend change to get all timestamps for metrics explorer

* remove whitespace

--- a/static/alert.html
+++ b/static/alert.html
@@ -306,6 +306,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/metrics-explorer.js?cb=1_1_10"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
+    <script src="./js/lib/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     {{ .RunCheck2 | safeHTML }}
     {{ .RunCheck3 | safeHTML }}
