--- a/static/alert.html
+++ b/static/alert.html
@@ -43,7 +43,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
+    <link rel="stylesheet" href="./css/lib/jquery.tagsinput.min.css" />
+    <link rel="stylesheet" href="./css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" href="./css/siglens.css?v={{ CSSVersion }}" />
+    <link rel="stylesheet" href="./css/query-builder.css?v={{ CSSVersion }}" />
     <link rel="stylesheet" href="./css/metrics-explorer.css?v={{ CSSVersion }}" />
 
     <style>
@@ -55,6 +58,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         }
         #metrics-explorer, #metrics-graphs{
             display: none;
+        }
+        .query-builder-container{
+            margin: 0px;
+            background-color: var(--bg-color);
         }
 
     </style>
@@ -130,6 +137,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                         <li id="option-1" class="logs-language-option active">Splunk QL</li>
                                     </div>
                                 </div>
+                                <div class="index-box">
+                                    <div style="margin-right: 5px;">Indexes:</div>
+                                    <div class="index-container">
+                                        <input type="text" name="" id="index-listing">
+                                        <button id="add-index" class="add-con btn">+</button>
+                                    </div>
+                                </div>
                                 <div class="dropdown timepicker">
                                     <button class="btn dropdown-toggle" type="button" id="date-picker-btn"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
@@ -167,12 +181,81 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 </div>
                             </div>
                             <div class="query-container position-relative">
-                                <input type="text" class="form-control" placeholder="Enter a query" id="query" required tabindex="2">
-
-                                <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip"
-                                    id="info-icon-spl" style="display: block;" title='city=Boston | stats count
-                                city=* | stats avg(latency)
-                                '></i>
+                                <div id = "custom-code-tab" class="custom-code-tab">
+                                    <div class="query-builder-container">
+                                        <div class="d-flex justify-content-end">
+                                            <ul class="tab-list">
+                                                <li class="tab-li tab-li-query" id = "tab-title1"><a href="#tabs-1" class="custom-query-builder">Builder</a></li>
+                                                <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Code</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="d-flex">
+                                            <div id = "tabs-1">
+                                                <div class="filter-info">
+                                                    <div id="filter-container">
+                                                        <div class="filter-con">
+                                                            <div class="filter-box" id="filter-box-1">
+                                                                <span class = "aggregations" id="search-filter-text">Search filter</span>
+                                                                <ul id="tags" class="tags-list"></ul>
+                                                                <button id="add-con" class="add-con btn">+</button>
+                                                            </div>
+                                                            <div class="add-filter" id="add-filter">
+                                                                <input id="column-first" class="column-first" type="hidden" onkeyup="checkContent(this)"/>
+                                                                <input id="symbol" class="symbol" type="hidden" onkeyup="checkContent(this)"/>
+                                                                <input id="value-first" class="value-first" type="hidden" onkeyup="checkContent(this)"/>
+                                                                <button id="completed" class="completed btn"></button>
+                                                                <button id="cancel-enter" class="cancel-enter btn">×</button>
+                                                            </div>
+                                                        </div>
+                                                        <div class="builder-div">stats</div>
+                                                        <div class="filter-con second-enter">
+                                                            <div class="filter-box" id="filter-box-2">
+                                                                <span class = "aggregations" id="aggregate-attribute-text">Aggregation attribute</span>
+                                                                <ul id="tags-second" class="tags-list"></ul>
+                                                                <button id="add-con-second" class="add-con btn">+</button>
+                                                            </div>
+                                                            <div class="add-filter add-filters" id="add-filter-second">
+                                                                <input id="column-second" class="column-first" type="hidden" onkeyup="checkSecondContent(this)"/>
+                                                                <input id="value-second" class="value-first" type="hidden" onkeyup="checkSecondContent(this)"/>
+                                                                <button id="completed-second" class="completed btn" ></button>
+                                                                <button id="cancel-enter-second" class="cancel-enter btn">×</button>
+                                                            </div>
+                                                        </div>
+                                                        <div class="builder-div">group by</div>
+                                                        <div class="filter-con third-enter">
+                                                            <div class="filter-box third-box"  id="filter-box-3">
+                                                                <span class = "aggregations" id="aggregations">Group by column name</span>
+                                                                <ul id="tags-third" class="tags-list"></ul>
+                                                                <button id="add-con-third" class="add-con btn">+</button>
+                                                            </div>
+                                                            <div class="add-filter add-third" id="add-filter-third">
+                                                                <input id="column-third" class="column-third" type="hidden" />
+                                                                <button id="cancel-enter-third" class="cancel-enter btn">×</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <button class="search-img" id="query-builder-btn" type="button"></button>
+                                                </div>
+                                            </div>
+                                            <div id = "tabs-2">
+                                                <div class="filter-container">
+                                                    <div class="position-relative search-bar-container">
+                                                        <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip"
+                                                        id="info-icon-spl" style="display: block;" title='city=Boston | stats count
+                                                    city=* | stats avg(latency)
+                                                    '></i>
+                                                        <textarea class="form-control expandable-textarea" id="filter-input"
+                                                            placeholder="Enter your SPL query here, or click the 'i' icon for examples" type="text"></textarea>
+                                                        <span class="clear-icon" id="clearInput" title="Clear"></span>
+                                                    </div>
+                                                    <div class="text-end">
+                                                        <button class="btn run-filter-btn" id="run-filter-btn" title="Run your search" type="button"></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div id="metrics-explorer">
                                 <div id="metrics-queries"></div>
@@ -257,7 +340,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             </div>
                             <div class="error-message" id="contact-point-error">Please choose a contact point option!</div>
                             <div class="message-info" id="message-info">
-                                Message<textarea name="message" id="notification-msg" rows="4" class="message form-control" tabindex="6"
+                                Message<textarea name="message" id="notification-msg" rows="4" class="message" tabindex="6"
                                     required></textarea>
                             </div>
                         </div>
@@ -304,6 +387,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/contacts.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/metrics-explorer.js?cb=1_1_10"></script>
+    <script src="./js/search.js?cb=1_1_10"></script>
+    <script src="./js/index.js?cb=1_1_10"></script>
+    <script src="./js/query-builder.js"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
     <script src="./js/lib/chartjs-adapter-date-fns.bundle.min.js"></script>
