Display Bar Chart for Logs Query

--- a/static/alert.html
+++ b/static/alert.html
@@ -75,6 +75,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    <script src="./js/lib/echarts.min.js"></script>
     <script>
         var defaultTheme = Cookies.get('theme') || 'light';
         $('html').attr('data-theme', defaultTheme);
@@ -105,6 +106,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <div class="add-alert-form">
                         <div id="metrics-graphs" class="metrics-graph-container">
     
+                        </div>
+                        <div id="logs-explorer">
+
                         </div>
                         <div class="subsection-heading">
                             <div class="circle">1</div>
@@ -391,6 +395,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./js/query-builder.js"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
+    <script src="./js/dashboard-charts.js"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
     <script src="./js/lib/chartjs-adapter-date-fns.bundle.min.js"></script>
 
